01_Ret180/01_velocity_yp15/slurm-2904346.out
This job can be monitored from: https://grafana.c3se.chalmers.se/d/gpu-job/gpu-job?var-jobid=2904346&from=1728034589000
Traceback (most recent call last):
  File "/mimer/NOBACKUP/groups/kthmech/sadanori/01_Ret180/01_velocity_yp15/train.py", line 14, in <module>
    from models.CNN import cnn_model
  File "/mimer/NOBACKUP/groups/kthmech/sadanori/01_Ret180/01_velocity_yp15/models/CNN.py", line 230
    act_b2 = layers.Activation(tf.keras.activations.relu(lambda x: threshold=app.RELU_THRESHOLD))(cnv_b2)
                                                         ^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
